--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,36 @@ h1 {
 #menu {
     background-color: #e8e4da;
     padding: 20px;
+    font-size: larger;
+    font-weight: 800;
 }
-
+ul {
+    background-color: #996848;
+}
+ul li {
+    color: #840016;
+}
+ol {
+    background-color: #e8e4da;
+}
+ol li {
+    color: #36492e;
+}
 a:link {
     color: #840016;
 }
 a:visited {
     color: #54392d;
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 8px;
+}
+
+button {
+    font-weight: bold;
+    font-size: larger;
 }
